staging/tvplatform-dev-device/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tvplatform-dev-device-staging
  namespace: default
spec:
  type: NodePort
  selector:
    app: tvplatform-dev-device-staging
    env: staging
  ports:
  - name: http
    port: 8000 # svc port
    targetPort: 8000 # app port
