staging/tvplatform-dev-device/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: staging-device
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: default/abdallah
    # nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "3000"
    # ##########################################
    # nginx.ingress.kubernetes.io/proxy-ssl-secret: default/ca-secrrr
    # nginx.ingress.kubernetes.io/proxy-ssl-verify: "on"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    
  name: tvplatform-dev-device
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.device.staging-ooro.co.uk
        - device.staging-ooro.co.uk
      secretName: staging-device
  rules:
    - host: www.device.staging-ooro.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tvplatform-dev-device
                port:
                  number: 8000
    - host: device.staging-ooro.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tvplatform-dev-device
                port:
                  number: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: staging-device
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: default/abdallah
    # nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "3000"
    # nginx.ingress.kubernetes.io/rewrite-target: /ELARABY/$2/METADATA/v$1/Published/$2.json
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   if ($request_uri ~* ^/update/v([0-9]+)/([A-Z0-9]+)\.json$) {
    #       set $device_id $2;
    #       set $version $1;
    #       return 302 /ELARABY/$device_id/METADATA/v$version/Published/$device_id.json;
    #   }

      
  name: tvplatform-dev-device-other
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.device.staging-ooro.co.uk
        - device.staging-ooro.co.uk
      secretName: staging-device
  rules:
    - host: www.device.staging-ooro.co.uk
      http:
        paths:
          - path: "/update/v([0-9]+)/([A-Z0-9]+).json"
            pathType: ImplementationSpecific
            backend:
              service:
                name: tvplatform-dev-device
                port:
                  number: 8000
    - host: device.staging-ooro.co.uk
      http:
        paths:
          - path: "/update/v([0-9]+)/([A-Z0-9]+).json"
            pathType: ImplementationSpecific
            backend:
              service:
                name: tvplatform-dev-device
                port:
                  number: 8000


# https://device.staging-ooro.co.uk/update/v1/ES3300.JSON

# https://device.staging-ooro.co.uk/ELARABY/ES3300/METADATA/v2/Published/ES3300.json
    
    
    # nginx.ingress.kubernetes.io/rewrite-target: /ELARABY/$1/METADATA/v1/Published/$1.json
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   if ($request_uri ~* ^/update/([A-Z0-9]+)\.json$) {
    #       set $device_id $1;
    #       return 302 /ELARABY/$device_id/METADATA/v1/Published/$device_id.json;
    #   }
# kubectl create secret generic abdallah --from-file=ca.crt=ca.crt
